MADE NEW JSON AND OOPS FILES

--- a/profile.html
+++ b/profile.html
@@ -16,10 +16,12 @@
             <h1>Deadline Buddy</h1>
         </div>
         <ul class="nav-links">
-            <li><a href="dashboard.html" class="nav-link"><i class="ph ph-house"></i> Dashboard</a></li>
-            <li><a href="subjects.html" class="nav-link"><i class="ph ph-books"></i> Subjects</a></li>
-            <li><a href="profile.html" class="nav-link active"><i class="ph ph-user"></i> Profile</a></li>
-        </ul>
+    <li><a href="dashboard.html" class="nav-link"><i class="ph ph-house"></i> Dashboard</a></li>
+    <li><a href="subjects.html" class="nav-link"><i class="ph ph-books"></i> Subjects</a></li>
+    <li><a href="notifications.html" class="nav-link"><i class="ph ph-bell"></i> Notifications</a></li>
+    <li><a href="study-tips.html" class="nav-link"><i class="ph ph-lightbulb"></i> Study Tips</a></li>
+    <li><a href="profile.html" class="nav-link"><i class="ph ph-user"></i> Profile</a></li>
+</ul>
     </nav>
 
     <!-- Main Content -->
@@ -46,7 +48,7 @@
                                 </div>
                             </div>
                             <div class="profile-info">
-                                <h3 id="displayName">HARSH SINGH</h3>
+                                <h3 id="displayName">HARSH PRATAP SINGH</h3>
                                 <p class="profile-role" id="displayRole">Computer Science Student</p>
                                 <p class="profile-university" id="displayUniversity">BML MUNJAL UNIVERSITY</p>
                             </div>
@@ -135,7 +137,7 @@
 
     <script>
 // Storage helpers
-const getProfile = () => JSON.parse(localStorage.getItem("userProfile") || '{"fullName":"HARSH SINGH","email":"harshpratap.singh.24cse@bmu.edu.in","studentId":"240465","university":"BML MUNJAL","academicYear":"2025-2026","major":"Computer Science"}');
+const getProfile = () => JSON.parse(localStorage.getItem("userProfile") || '{"fullName":"HARSH PRATAP SINGH","email":"harshpratap.singh.24cse@bmu.edu.in","studentId":"240465","university":"BML MUNJAL","academicYear":"2025-2026","major":"Computer Science"}');
 const saveProfile = (data) => localStorage.setItem("userProfile", JSON.stringify(data));
 const getTasks = () => JSON.parse(localStorage.getItem("deadlineBuddyTasks") || "[]");
 const getCompleted = () => JSON.parse(localStorage.getItem("deadlineBuddyCompletedTasks") || "[]");
