--- a/subjects.html
+++ b/subjects.html
@@ -22,22 +22,12 @@
         <h1>Deadline Buddy</h1>
       </div>
       <ul class="nav-links">
-        <li>
-          <a href="dashboard.html" class="nav-link"
-            ><i class="ph ph-house"></i> Dashboard</a
-          >
-        </li>
-        <li>
-          <a href="subjects.html" class="nav-link active"
-            ><i class="ph ph-books"></i> Subjects</a
-          >
-        </li>
-        <li>
-          <a href="profile.html" class="nav-link"
-            ><i class="ph ph-user"></i> Profile</a
-          >
-        </li>
-      </ul>
+    <li><a href="dashboard.html" class="nav-link"><i class="ph ph-house"></i> Dashboard</a></li>
+    <li><a href="subjects.html" class="nav-link"><i class="ph ph-books"></i> Subjects</a></li>
+    <li><a href="notifications.html" class="nav-link"><i class="ph ph-bell"></i> Notifications</a></li>
+    <li><a href="study-tips.html" class="nav-link"><i class="ph ph-lightbulb"></i> Study Tips</a></li>
+    <li><a href="profile.html" class="nav-link"><i class="ph ph-user"></i> Profile</a></li>
+    </ul>
     </nav>
 
     <!-- Main Content -->
@@ -105,8 +95,8 @@
 
   // Default subjects (shown if localStorage is empty)
   const defaultSubjects = [
-    { name: "Calculus", icon: "ph ph-function" },
-    { name: "Data Structures", icon: "ph ph-tree-structure" },
+    { name: "OOP in JAVA", icon: "ph ph-function" },
+    { name: "Data Structures and Algorithms", icon: "ph ph-tree-structure" },
     { name: "Web Development", icon: "ph ph-code" },
   ];
 
